--- a/package.json
+++ b/package.json
@@ -5,15 +5,30 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "start": "webpack-dev-server --open"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.1.0",
+    "prettier": "^1.11.1",
+    "prettier-eslint": "^8.8.1",
     "style-loader": "^0.20.3",
     "webpack": "^4.3.0",
-    "webpack-cli": "^2.0.13"
-  }
+    "webpack-cli": "^2.0.13",
+    "webpack-dev-server": "^3.1.1",
+    "babel-preset-react": "^6.24.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
+  },
+  "dependencies": {}
 }
