--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "webpack-dev-server --open"
+    "start": "webpack-dev-server --open --mode development",
+    "restart": "webpack-dev-server --mode development"
   },
   "author": "",
   "license": "ISC",
@@ -28,7 +29,9 @@
     "webpack-dev-server": "^3.1.1",
     "babel-preset-react": "^6.24.1",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
-  },
-  "dependencies": {}
+    "react-dom": "^16.2.0",
+    "dateformat": "^3.0.3",
+    "prop-types": "^15.6.1",
+    "react-form": "^3.4.3"
+  }
 }
