Better UX for coffee name input
- remembers previous choices
- validation on brew type

--- a/package.json
+++ b/package.json
@@ -14,24 +14,25 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
+    "dateformat": "^3.0.3",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.1.0",
     "prettier": "^1.11.1",
     "prettier-eslint": "^8.8.1",
+    "prop-types": "^15.6.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-form": "^3.4.3",
     "style-loader": "^0.20.3",
     "webpack": "^4.3.0",
     "webpack-cli": "^2.0.13",
-    "webpack-dev-server": "^3.1.1",
-    "babel-preset-react": "^6.24.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "dateformat": "^3.0.3",
-    "prop-types": "^15.6.1",
-    "react-form": "^3.4.3"
+    "webpack-dev-server": "^3.1.1"
   }
 }
