--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^8.2.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -19,17 +20,22 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
+    "bootstrap": "^4.0.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "dateformat": "^3.0.3",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.1.0",
+    "node-sass": "^4.8.3",
+    "postcss-loader": "^2.1.3",
+    "precss": "^3.1.2",
     "prettier": "^1.11.1",
     "prettier-eslint": "^8.8.1",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-form": "^3.4.3",
+    "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "webpack": "^4.3.0",
     "webpack-cli": "^2.0.13",
